fix layout display bug on mobile

--- a/src/components/layout.styl
+++ b/src/components/layout.styl
@@ -1,6 +1,6 @@
 .layout
     // all
-    position: relative
+    position: static
     overflow: hidden
     width: 100%
     background-color: #fff
